02_code1/grade.txt
Grading at Tue Apr 27 14:39:27 UTC 2021
Checking code1.c for legal syntax
temp.c:40:1: error: "/*" within comment [-Werror=comment]
 /* for (int dig=8,maxhex[dig]=!0, dig--){
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
